# space-war

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  Makefile  README.md  index.md  postfix.js  template.html
cmake/: FindSDL2.cmake  FindSDL2_GFX.cmake  FindSDL2_IMAGE.cmake  FindSDL2_MIXER.cmake  FindSDL2_NET.cmake  FindSDL2_TTF.cmake  FindSDL2_gfx.cmake  FindSDL2_mixer.cmake
data/: en.txt  level0.txt  level1.txt  level2.txt  level3.txt  level4.txt  level5.txt  level6.txt  level7.txt  level8.txt  level9.txt  paths.txt
dep/win64-mingw/Curl/x64/lib/: libcurl.lib
dep/win64-mingw/SDL2/x64/lib/: libSDL2.la  libSDL2_test.la  libSDL2main.la
dep/win64-mingw/SDL2/x64/lib/cmake/SDL2/: sdl2-config-version.cmake
dep/win64-mingw/SDL2/x64/lib/pkgconfig/: sdl2.pc
dep/win64-mingw/SDL2_gfx/x64/include/SDL2/: SDL2_imageFilter.c
dep/win64-mingw/SDL2_gfx/x86_64-w64-mingw32/include/SDL2/: SDL2_framerate.h  SDL2_gfxPrimitives.h
dep/win64-mingw/SDL2_net/i686-w64-mingw32/lib/pkgconfig/: SDL2_net.pc
dep/win64-mingw/SDL2_net/x64/lib/: libSDL2_net.la
dep/win64-mingw/SDL2_net/x64/lib/cmake/SDL2_net/: sdl2_net-config-version.cmake  sdl2_net-config.cmake
dep/win64-mingw/SDL2_net/x64/lib/pkgconfig/: SDL2_net.pc
dep/win64-mingw/SDL2_net/x86_64-w64-mingw32/lib/: libSDL2_net.la
dep/win64-mingw/SDL2_ttf/x64/lib/pkgconfig/: SDL2_ttf.pc
dep/win64-msvc/Curl/x64/lib/: libcurl.lib
dep/win64-msvc/SDL2_gfx/x64/include/SDL2/: SDL2_framerate.h  SDL2_gfxPrimitives.h
dep/win64-msvc/SDL2_gfx/x64/lib/: SDL2_gfx.lib
dep/win64-msvc/SDL2_image/x64/include/SDL2/: SDL_image.h
dep/win64-msvc/SDL2_mixer/x64/include/SDL2/: SDL_mixer.h
dep/win64-msvc/SDL2_net/x64/include/SDL2/: SDL_net.h
dep/win64-msvc/SDL2_ttf/x64/include/SDL2/: SDL_ttf.h
icon/: res.rc
src/: background.c  background.h  boss.c  boss.h  collision.c  collision.h  controls.c  controls.h  credits.c  credits.h  effect.c  end.c  end.h  enemy.c  enemy.h  event.c  event.h  explosion.c  explosion.h  free.c  free.h  game.c  game.h  hud.c  hud.h  init.c  init.h  intro.c  intro.h  ip.c  ip.h  level.c  level.h  list.c  list.h  lobby.c  lobby.h  main.c  menu.c  menu.h  (+30 more)
src/data_struct/: list.c  list.h  string_vec.c  string_vec.h  vector.c
src/game/: background.c  background.h  boss.c  boss.h  collision.c  collision.h  effect.c  effect.h  enemy.c  enemy.h  explosion.c  explosion.h  game.c  game.h  hud.c  hud.h  object.c  object.h  shot.c  shot.h  wave.c  wave.h  weapon.c  weapon.h
src/init/: free.c  free.h  init.c  init.h  language.c  language.h  path.c  path.h
src/menus/: credits.c  credits.h  end.c  end.h  help.c  help.h  intro.c  intro.h  level.c  menu.c  menu.h  pause.c  pause.h  ready.c  ready.h  stars.h
src/network/: ip.c  ip.h  lobby.c  lobby.h  msg_list.c  msg_list.h  net.c  net.h
src/settings/: controls.c  controls.h  save.c  save.h  setting.c  setting.h
src/utils/: event.c  event.h  file.c  file.h  framerate.c  framerate.h  pixel.c  utils.c  utils.h
